qtcreator (4.5.2-4) UNRELEASED; urgency=medium

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 19 Mar 2018 14:38:41 -0300

qtcreator (4.5.2-3) unstable; urgency=medium

  * Update libclang dependency to 6.0 (closes: #893402)

 -- Adam Majer <adamm@zombino.com>  Sun, 18 Mar 2018 19:10:54 +0100

qtcreator (4.5.2-2) unstable; urgency=medium

  * Team upload.
  * Switch the kdelibs5-data suggest to kate-data, since the latter is where
    the kate syntax definitions are; unfortunately they are the kde4 versions,
    as the KF5 syntax-highlighting embeds its own as Qt resources.
  * Use https in the watch file.
  * Move desktop file, and appdata file from qtcreator-data to qtcreator, as
    they must be together with the executable they refer to
    - add proper breaks/replaces
  * Add the zlib1g-dev build dependency: apparently LLVM/Clang 3.9 exposes -lz
    as dependency for its libraries, and the -dev packages do not depend on it.
  * Remove the unused ${perl:Depends} substvar from qtcreator-data.

 -- Pino Toscano <pino@debian.org>  Sun, 18 Mar 2018 10:23:36 +0100

qtcreator (4.5.2-1) unstable; urgency=medium

  [ Simon Quigley ]
  * New upstream release. (closes: #893207)
  * Bump debhelper compat to 11, no changes needed.
  * Bump Standards-version to 4.1.3, no changes needed.
  * Fix insecure-copyright-format-uri.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove botan patches. We can now use USE_SYSTEM_BOTAN as soon as botan2
    hits the archive. Thanks Christian Kandeler for the pointer!
  * Switch Vcs-[Git Browser] to salsa.debian.org.

  [ Alexander Volkov ]
  * Revert "Export LLVM_INSTALL_DIR without harcoding the version." since
    this method doesn't work with libclang-3.9-dev and llvm-3.9-dev
    build dependencies. (closes: #889984, #888895)

  [ Adam Majer ]
  * Enable USE_SYSTEM_BOTAN again. (botan2.wip.patch, botan2.debian.patch)
  * Update Qt minimum version dependency to 5.6.2
