@@ -1,5 +1,9 @@
 qtcreator (4.5.2-4) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Use Helmut Grohne's patch to simplify debian/rules and allow qtcreator to
+    be crossbuilt (Closes: #893508).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 19 Mar 2018 14:38:41 -0300
 
 qtcreator (4.5.2-3) unstable; urgency=medium
